添加了用户自定义模板，模板选择和本地json格式储存功能，同时优化了用户对大模型的使用体验